--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,8 @@
+[phases.setup]
+nixPkgs = ['nodejs_18']
+
 [phases.install]
-cmds = ['npm ci']
+cmds = ['npm ci --only=production']
 
 [phases.build]
 cmds = ['npm run build']
