fix: Remove server.js and simplify Railway config
- Remove corrupted server.js file (UTF-8 encoding issues)
- Simplify nixpacks.toml to use only serve package
- Simplify railway.toml configuration
- Update package.json scripts to use serve directly
- Pure static hosting approach (no Express dependency)

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,7 +2,7 @@
 nixPkgs = ['nodejs_18']
 
 [phases.install]
-cmds = ['npm ci --only=production']
+cmds = ['npm ci']
 
 [phases.build]
 cmds = ['npm run build']
