--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "lint": "eslint src --ext .ts,.tsx",
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
     "format": "prettier --write src/**/*.{ts,tsx,css,md}",
-    "serve": "node server.js"
+    "serve:static": "npx serve -s build",
+    "serve:port": "npx serve -s build -p $PORT"
   },
   "eslintConfig": {
     "extends": [
